fix: sort by popularity

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "deploy": "next build && touch ./out/.nojekyll && gh-pages -d out -t true"
+    "deploy": "next build && touch ./out/.nojekyll && gh-pages -d out --dotfiles"
   },
   "dependencies": {
     "@phosphor-icons/react": "^2.1.10",
