--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@phosphor-icons/react": "^2.1.10",
     "@react-spring/web": "^10.0.1",
     "@use-gesture/react": "^10.3.1",
-    "next": "15.3.5",
+    "next": "^15.5.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "three": "^0.178.0"
@@ -30,6 +30,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.3.5",
     "gh-pages": "^6.3.0",
+    "prettier": "3.6.2",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
